--- a/README
+++ b/README
@@ -9,5 +9,8 @@ https://nl.wikipedia.org/wiki/Alcoholisme
 # drilboor
 https://nl.wikipedia.org/wiki/Drilboor
 
+# huisvredebreuk
+https://nl.wikipedia.org/wiki/Huisvredebreuk
+
 # daalhof
 https://nl.wikipedia.org/wiki/Daalhof
